
     ./update_bacula_tables

  It is necessary to run it only once the first time you move to a
  1.39.x beta or to 1.40.0. Upgrading the Bacula version thereafter
  does not require updating the database again. Depending on the size of your
  database the script make take a bit of time, to run, but in
  general, it should be very fast.

New Features in 1.40.0 (beginning of release info)
- There is a new cross-compiled Win32 File daemon that now has all the features
  that were previously only in the Unix versions.

  To install the 1.39.18 Win32 FD, you *must* first stop any    
  previous version that is running in a DOS shell with:

     net stop bacula

  or select the 'Close Bacula' menu item from the Bacula tray icon,
  you should then save your bacula-fd.conf file, and either
  uninstall (using Uninstall.bat in the c:\bacula directory) or
  remove the old installation by manually in a DOS shell in the
  Bacula directory enter:

     bacula-fd /remove

  after that you can proceed with the installation.  My experience
  is that it does not properly create the new bacula-fd.conf file, so
  copy the one saved to the directory you chose to install Bacula,
  or to the directory chosen by the Installer to put the bacula-fd.conf
  file.  Then you can start Bacula in a DOS shell with:

    net start baculafd

  or use the Windows Control Panel->Administrative Tools->Component
  Services menu item.  The document has been updated (not completely).
  For installation details, please see:
  http://www.bacula.org/dev-manual/Windows_Version_Bacula.html  


==========================================

Warning for version 1.39.18 and greater:
- The documentation is almost non-existent for all new features
  except RunScripts (written and documented by Eric Bollengier).
- If you have an old pre 1.39.18 database, you must update it using
  the update_bacula_tables script. Please backup your database before
  updating just in case.