@@ -3,9 +3,9 @@
  */
 
 #undef  VERSION
-#define VERSION "1.39.21"
-#define BDATE   "04 Septermber 2006"
-#define LSMDATE "04Sep06"
+#define VERSION "1.39.22"
+#define BDATE   "06 Septermber 2006"
+#define LSMDATE "06Sep06"
 #define BYEAR "2006"       /* year for copyright messages in progs */
 
 /* Debug flags */
